--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -257,6 +257,9 @@
     <Filter Include="ソース ファイル\Game\Character\Player">
       <UniqueIdentifier>{0d174a58-76d1-47db-99b2-47a5c26c7247}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Game\UI\ObjectUI\Button">
+      <UniqueIdentifier>{5820160b-9258-4e0b-87f8-10047015b0d9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -906,6 +909,9 @@
     </ClCompile>
     <ClCompile Include="src\Game\CJumpingKinokoMoveTo.cpp">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping\KInoko\KInokoBase</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CButton1UI.cpp">
+      <Filter>ソース ファイル\Game\UI\ObjectUI\Button</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1580,6 +1586,9 @@
     </ClInclude>
     <ClInclude Include="src\Game\CJumpingKinokoMoveTo.h">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping\KInoko\KInokoBase</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CButton1UI.h">
+      <Filter>ソース ファイル\Game\UI\ObjectUI\Button</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
