--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -275,6 +275,12 @@
     <Filter Include="ソース ファイル\Game\Field\Object\Gimmick\Reflection\ReflectionKinoko">
       <UniqueIdentifier>{e5ef79fd-e8bb-466d-b7f3-d6895184a77c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Game\Field\Object\Gimmick\Jumping\PointLine">
+      <UniqueIdentifier>{05e86614-8b35-4902-a7ed-d87b3224ba82}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Game\Field\Object\MoveLine">
+      <UniqueIdentifier>{25fe477c-8147-48ba-904a-89823572669e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -948,6 +954,12 @@
     </ClCompile>
     <ClCompile Include="src\Game\CReflectionMove.cpp">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Reflection\Base</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CPointLine.cpp">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping\PointLine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CCircleLine.cpp">
+      <Filter>ソース ファイル\Game\Field\Object\MoveLine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1646,6 +1658,12 @@
     </ClInclude>
     <ClInclude Include="src\Game\CReflectionMove.h">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Reflection\Base</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CPointLine.h">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping\PointLine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CCircleLine.h">
+      <Filter>ソース ファイル\Game\Field\Object\MoveLine</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
