--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -290,6 +290,9 @@
     <Filter Include="ソース ファイル\Game\Field\StageField\Title Stage">
       <UniqueIdentifier>{fe26ba35-e2ae-42aa-8aa6-2f62e348779c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Game\Field\Object\Gimmick\Jumping\Spring">
+      <UniqueIdentifier>{eb222605-0916-4904-9eec-ffcff45fd0aa}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -984,6 +987,12 @@
     </ClCompile>
     <ClCompile Include="src\Game\CApplication.cpp">
       <Filter>ソース ファイル\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CSpringObject.cpp">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping\Spring</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CSpring.cpp">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping\Spring</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1703,6 +1712,12 @@
     </ClInclude>
     <ClInclude Include="src\Game\CTitleUI.h">
       <Filter>ソース ファイル\Game\UI\TitleUI</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CSpringObject.h">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping\Spring</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CSpring.h">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping\Spring</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
