--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -236,6 +236,7 @@
     <ClCompile Include="src\Game\CDisappearFloor.cpp" />
     <ClCompile Include="src\Game\CItemObjectBase.cpp" />
     <ClCompile Include="src\Game\CHealingUpBuffs.cpp" />
+    <ClCompile Include="src\Game\CPicoChan.cpp" />
     <ClCompile Include="src\Game\PlayerItem.cpp" />
     <ClCompile Include="src\Game\CResultAnnouncement.cpp" />
     <ClCompile Include="src\Game\CSmoke.cpp" />
@@ -487,6 +488,7 @@
     <ClInclude Include="src\Game\CDisappearFloor.h" />
     <ClInclude Include="src\Game\CItemObjectBase.h" />
     <ClInclude Include="src\Game\CHealingUpBuffs.h" />
+    <ClInclude Include="src\Game\CPicoChan.h" />
     <ClInclude Include="src\Game\PlayerItem.h" />
     <ClInclude Include="src\Game\CResultAnnouncement.h" />
     <ClInclude Include="src\Game\CSmoke.h" />
